Cycles clipping doesn't match viewport when camera is inside volume #43783

Closed
opened 2015-02-22 22:58:14 +01:00 by gandalf3 · 6 comments
Member

System Information
Archlinux

Blender Version
Broken: Tested in 29e19ce

Short description of error
Cycles clipping doesn't match viewport clipping when the camera is inside a smoke domain.

Exact steps for others to reproduce the error

  1. Open cycles_clipping_doesnt_match_viewport2.blend
  2. Note that the "sun" circle object is visible in viewport render from camera view even though its outside of the clipping distance
**System Information** Archlinux **Blender Version** Broken: Tested in 29e19ce **Short description of error** Cycles clipping doesn't match viewport clipping when the camera is inside a smoke domain. **Exact steps for others to reproduce the error** 1. Open [cycles_clipping_doesnt_match_viewport2.blend](https://archive.blender.org/developer/F145319/cycles_clipping_doesnt_match_viewport2.blend) 2. Note that the "sun" circle object is visible in viewport render from camera view even though its outside of the clipping distance
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @gandalf3

Added subscriber: @gandalf3
Sergey Sharybin self-assigned this 2015-02-23 10:43:02 +01:00

This issue was referenced by a585cbd2af

This issue was referenced by a585cbd2af92c0a1ebf24c1a28069bb4ebf1d177

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit a585cbd2af.

Closed by commit a585cbd2af.

This issue was referenced by blender/cycles@0d918f6a4c

This issue was referenced by blender/cycles@0d918f6a4c8b3660b61a4537697935fb1f71c912
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43783
No description provided.