Fix T43783: Cycles clipping doesn't match viewport when camera is inside volume

Ray length adjustment got lost in some refactor commit back to 2.71 days.